# D.A.V.E.

./: .gitignore  LICENSE  README.md  requirements.txt  start_dashboard_system.sh
dashboard/: app.js  index.html  style.css
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/NAVsystem/lib/NAVsystem/: listener  talker
ros2_ws/install/NAVsystem/share/NAVsystem/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: get_nav.hpp  set_nav.h
ros2_ws/install/custom_interfaces/share/ament_index/resource_index/parent_prefix_path/: custom_interfaces
ros2_ws/install/custom_interfaces/share/custom_interfaces/: package.sh
ros2_ws/install/custom_interfaces/share/custom_interfaces/msg/: Message.idl
ros2_ws/install/custom_interfaces/share/custom_interfaces/srv/: SetNav.idl  SetNav.srv
ros2_ws/install/dave_interfaces/include/dave_interfaces/dave_interfaces/msg/: bearing.hpp  position.hpp
ros2_ws/install/dave_interfaces/include/dave_interfaces/dave_interfaces/srv/: get_set_nav.h  get_set_nav.hpp
ros2_ws/install/dave_interfaces/share/dave_interfaces/: package.sh  package.xml
ros2_ws/install/dave_interfaces/share/dave_interfaces/cmake/: export_dave_interfaces__rosidl_generator_cExport.cmake  export_dave_interfaces__rosidl_typesupport_fastrtps_cExport.cmake
ros2_ws/install/dave_interfaces/share/dave_interfaces/msg/: Bearing.idl  Bearing.msg  Position.idl
ros2_ws/install/dave_interfaces/share/dave_interfaces/srv/: GetSetNav.idl  GetSetNav.srv
ros2_ws/install/enigma_machine/share/ament_index/resource_index/parent_prefix_path/: enigma_machine
ros2_ws/install/enigma_machine/share/enigma_machine/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/enigma_machine/share/enigma_machine/cmake/: enigma_machineConfig.cmake
ros2_ws/install/enigma_machine/share/enigma_machine/environment/: ament_prefix_path.sh  path.sh
ros2_ws/install/navigation_interfaces/include/navigation_interfaces/navigation_interfaces/msg/: bearing.h  bearing.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ros2_ws/install/navigation_interfaces/include/navigation_interfaces/navigation_interfaces/srv/: get_nav.h  get_nav.hpp  get_set_nav.h  get_set_nav.hpp  set_nav.h
ros2_ws/install/navigation_interfaces/share/navigation_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/navigation_interfaces/share/navigation_interfaces/cmake/: export_navigation_interfaces__rosidl_generator_pyExport.cmake  export_navigation_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_navigation_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  navigation_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  navigation_interfaces__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
ros2_ws/install/navigation_interfaces/share/navigation_interfaces/msg/: Bearing.idl  Position.idl
ros2_ws/install/navigation_interfaces/share/navigation_interfaces/srv/: GetNav.idl  GetSetNav.idl  SetNav.idl  SetNav_Request.msg
ros2_ws/install/navsystem/lib/navsystem/: GPSnode
ros2_ws/install/navsystem/share/ament_index/resource_index/package_run_dependencies/: navsystem
ros2_ws/install/navsystem/share/navsystem/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/navsystem/share/navsystem/cmake/: navsystemConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/: test.txt
ros2_ws/src/IMU/: Kalman_Filter.py
ros2_ws/src/NAVsystem/: CMakeLists.txt
ros2_ws/src/NAVsystem/src/: GPSnode.cpp
ros2_ws/src/arm_controller/: README.md  package.xml  setup.py
ros2_ws/src/arm_controller/arm_controller/: arm_stepper_driver_node.py  dashboard_helper_node.py  kinematics.py  motion_coordinator_node.py
ros2_ws/src/arm_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/arm_interfaces/action/: GripperCommand.action  MoveToPoint.action
ros2_ws/src/arm_interfaces/msg/: ArmStatus.msg
ros2_ws/src/camera_handler/: CMakeLists.txt  package.xml
ros2_ws/src/camera_handler/src/: multi_camera_node.cpp
ros2_ws/src/drive_package/: CMakeLists.txt  package.xml  readme.md
ros2_ws/src/drive_package/scripts/: input_viewer.py
ros2_ws/src/drive_package/src/: drive_node.cpp  stepper_driver_node.cpp  vesc_driver_node.cpp
ros2_ws/src/enigma_machine/: CMakeLists.txt  package.xml  readme.md
ros2_ws/src/enigma_machine/scripts/: morse_recorder.py  py_node.py
ros2_ws/src/enigma_machine/src/: EnigmaMachine.cpp
ros2_ws/src/enigma_machine_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/enigma_machine_interfaces/action/: Decode.action  Encode.action  GetMorseSignalToDecoder.action  MorseSend.action
ros2_ws/src/enigma_machine_interfaces/msg/: MorseSignal.msg
ros2_ws/src/enigma_machine_interfaces/srv/: GetPassword.srv
ros2_ws/src/input_viewer_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/input_viewer_package/input_viewer_package/: input_viewer.py
ros2_ws/src/input_viewer_package/resource/: controller_plane.dae
ros2_ws/src/navigation_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_interfaces/srv/: GetHome.srv  SerialSend.srv  SetHome.srv  SetNav.srv
ros2_ws/src/navigation_system/: CMakeLists.txt  NAVnode  NAVsystem.cpp  package.xml
ros2_ws/src/navigation_system/src/: GPSnode.cpp  NAVsystem.cpp
ros2_ws/src/navsystem/: CMakeLists.txt  package.xml
ros2_ws/src/navsystem/src/: GPSnode.cpp
ros2_ws/src/rover_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover_description/config/: physical_params.yaml
ros2_ws/src/rover_description/launch/: view_robot.launch.py
ros2_ws/src/rover_description/rviz/: default.rviz
ros2_ws/src/rover_description/urdf/: rover.urdf.xacro
(+85 files in other folders)
