<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navsystem</name>
  <version>0.0.0</version>
  <description> This Package will hold all nodes related to the GPS/Navigation system for DAVE (ORC's rover for CIRC 2026)</description>
  <maintainer email="isaac.bobmeyer@gmail.com">isaac</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>navigation_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>




  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
